--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
+<!html>
 <html>
-  <h1>Everything you need to know about Mersenne Numbers and the Great Internet Mersenne Prime Search(GIMPS)</h1>
+	<style>
+		#center {text-align:center;}
+		#large{
+			font-size: 20px;
+		}
+		#medium{
+			font-size: 16px;
+		}
+	</style>
+
+	<head>
+		<h1 id="center">Everything you need to know about Mersenne Numbers</h1>
+		<p id="large">This is a site which mentions about Mersenne Numbers and the Great Internet Mersenne Prime Search(GIMPS).</p>
+	</head>
+
+	<body>
+		<h2>Overview</h2>
+		<p id="medium">Mersenne numbers, denoted as M<sub>n</sub></p>
+	</body>
 </html>
