--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 		#center {text-align:center;}
 		#large{
 			font-size: 20px;
+			text-align:center;
 		}
-		#medium{
-			font-size: 16px;
+		p{
+			font-size: 18px;
 		}
 	</style>
 
@@ -17,6 +18,23 @@
 
 	<body>
 		<h2>Overview</h2>
-		<p id="medium">Mersenne numbers, denoted as M<sub>n</sub></p>
+
+		<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspMersenne numbers are defined as numbers in the form of 2<sup>n</sup>-1, where n is a positive integer. This means 2 multiplied by itself n times, then subtracting one. Mersenne numbers are denoted as M<sub>n</sub>.
+		</p>
+
+		<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspMersenne primes are Mersenne numbers which are prime, i.e. having 1 and itself as its only positive divisors. The five smallest Mersenne primes are M<sub>2</sub>=3, M<sub>3</sub>=7, M<sub>5</sub>=31, M<sub>7</sub>=127 and M<sub>13</sub>=8191. Mersenne primes occur very rarely. As of 2018, only 50 Mersenne primes are known. The largest known Mersenne prime is M<sub>77232917</sub>, which also happens to be the largest known prime number. It is widely conjectured that there are infinitely many Mersenne primes, but this remains an open (unsolved) problem in mathematics.
+		</p>
+
+		<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspThe Great Internet Mersenne Prime Search(GIMPS) is a distributed computing project which has a main aim of finding Mersenne primes. The last x known Mersenne primes have been found by GIMPS. For M<sub>n</sub> to be prime, n must be prime, hence reducing the search space. Furthermore, most M<sub>n</sub> for prime n have small factors which could be found easily, further cutting down the possibilities for finding Mersenne primes. The remaining Mersenne prime candidates are tested for primality (i.e. determine whether the number is prime) by either the Lucas-Lehmer test or a Fermat probable prime test.
+		</p>
+
+		<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspGIMPS also has a sub-project, which is to find small factors of M<sub>n</sub> for prime n at most 20 million, hopefully yielding a complete prime factorisation. As of 2018, the smallest Mersenne number which is known to be composite but has no known factor other than 1 and itself(i.e. non-trivial factor) is M<sub>1277</sub>.
+		</p>
+
+		<p class="medium">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspGIMPS has another sub-project, which is to find factors of Fermat numbers, which are numbers in the form 2<sup>2<sup>n</sup></sup>+1, for non-negative integers n. However, this is not the main focus of this webpage because the webpage is supposed to talk about Mersenne numbers instead of Fermat numbers.
+		</p>
+
+		<h2>Contents</h2>
+		<a href="mersenne-numbers.html"><p>More About Mersenne Numbers</p></a>
 	</body>
 </html>
